--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "universal-cookie": "^7.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
